compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__enums__typech_create_enum_params_incomp.snap
---
source: compiler/lume_typech/src/tests/check/enums.rs
description: "enum Foo { A, B(Int32, Boolean) }\n\n        fn foo() {\n            let a = Foo::B(false, 0);\n        }"
---
× error[LM4001]: mismatched types
   ╭───────────
 3 │         fn foo() {
 4 │             let a = Foo::B(false, 0);
   │                            ^^^^^ expected type Int32, but found type Boolean...
 5 │         }
   ∶ 
 1 │ enum Foo { A, B(Int32, Boolean) }
   │                 ^^^^^ ...because of type defined here
   ╰──
   help: expected type Int32
            found type Boolean
× error[LM4001]: mismatched types
   ╭───────────
 3 │         fn foo() {
 4 │             let a = Foo::B(false, 0);
   │                                   ^ expected type Boolean, but found type Int32...
 5 │         }
   ∶ 
 1 │ enum Foo { A, B(Int32, Boolean) }
   │                        ^^^^^^^ ...because of type defined here
   ╰──
   help: expected type Boolean
            found type Int32
